--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <form action="Admin.php" method="post">
-	<input type="text" id="login" name="login"/>
-	<input type="password" id="password" name="password"/>
+	<input type="text" id="login" name="login" placeholder="Login"/><br/>
+	<input type="password" id="password" name="password" placeholder="Hasło"/><br/>
 	<input type="submit">
 </form>
